- Fixed Layout issue - Correction made to fontfamily and fontsizes - Fixed splitter overlaping issue

--- a/src/component/Editor.scss
+++ b/src/component/Editor.scss
@@ -16,6 +16,13 @@
         margin-bottom: 10px;
     }
 
+    .section-io{
+        margin-left: 4px;
+    }
+    .scroll-decoration{
+        box-shadow: none!important;
+    }
+
 }
 .iheader,.idata,.section-io{
     width: 99%;
@@ -37,4 +44,5 @@
         display: block;
         overflow: hidden;
     }
+    
 }
