--- a/src/component/Playground.css
+++ b/src/component/Playground.css
@@ -15,7 +15,7 @@
   border-top: 5px solid #ccc;
   border-bottom: 5px solid #ccc;
   cursor: row-resize;
-  width: 100%; }
+  width: 99.2%; }
 
 .Resizer.horizontal:hover {
   border-top: 5px solid #ccc;
