--- a/src/component/Toolbar.scss
+++ b/src/component/Toolbar.scss
@@ -12,8 +12,8 @@
 
     a{
         text-decoration: none;
-        color: #232323;
-        font-size: 0.9rem;
+        color: #555555;
+        font-size: 1rem;
         display: inline-block;
         margin-right: 0.3rem;
         margin-right: 0.3rem;
