--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald|Roboto&display=swap');
 
 body {
-    font-family:  "Helvetica Neue", Helvetica, Arial;
+    font-family:  Roboto, sans-serif;
     margin: 0;
     padding: 0;
   }
